# solana-pay-py

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/specs/solana-pay-python-library/: design.md  requirements.md  tasks.md
docs/: api.md  troubleshooting.md  tutorial.md  validation_module_summary.md
examples/: .env.example  fastapi_merchant.py  simple_payment.py  spl_token_payment.py  stateful_merchant.py  test_stateful_merchant.py
scripts/: qr_transfer.py  run_tests.py  setup_devnet.py
solanapay/: __init__.py  cli.py  compat.py  convenience.py  urls.py  version.py
solanapay/config/: __init__.py  clusters.py  env.py  settings.py
solanapay/models/: __init__.py  transaction.py  transfer.py  validation.py
solanapay/server/: __init__.py  api.py  middleware.py  schemas.py
solanapay/tx_builders/: __init__.py  memo.py  references.py  transfer.py
solanapay/utils/: __init__.py  ata.py  debug.py  decimal.py  errors.py  logging.py  rpc.py  url_validation.py
solanapay/validation/: __init__.py  amounts.py  confirm.py  references.py
src/solana_pay_py/: __init__.py
tests/: conftest.py  test_additional.py  test_convenience.py  test_e2e_devnet.py  test_models.py  test_server.py  test_urls.py  test_utils.py
