[project]
name = "solana-pay-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fengzdadi", email = "453788063@qq.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "qrcode>=8.2",
    "solana>=0.36.9",
    "solders>=0.26.0",
    "uvicorn>=0.37.0",
]

[project.scripts]
solana-pay-py = "solana_pay_py:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
